# internal/sqlc/models.go
@@ -129,6 +129,7 @@ type SiteSetting struct {
 	CreatedAt                time.Time       `json:"created_at"`
 	UpdatedAt                time.Time       `json:"updated_at"`
 	SiteDescription          string          `json:"site_description"`
+	FaviconUrl               string          `json:"favicon_url"`
 	IcpNumber                string          `json:"icp_number"`
 	IcpLink                  string          `json:"icp_link"`
 	PsbNumber                string          `json:"psb_number"`
